--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "test-semantic-release",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "semantic-release": "GITHUB_TOKEN=96938c46abaa33832fe06e38c1e52fcd8b3dee58 semantic-release"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/b-dabrowski/test-semantic-release.git"
+    "url": "https://github.com/b-dabrowski/test-semantic-release.git"
   },
   "keywords": [
     "test"
@@ -18,5 +19,31 @@
   "bugs": {
     "url": "https://github.com/b-dabrowski/test-semantic-release/issues"
   },
-  "homepage": "https://github.com/b-dabrowski/test-semantic-release#readme"
+  "homepage": "https://github.com/b-dabrowski/test-semantic-release#readme",
+  "release": {
+    "branch": "development",
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      [
+        "@semantic-release/github",
+        {
+          "assets": [
+            {
+              "path": "dist/asset.min.css",
+              "label": "CSS distribution"
+            },
+            {
+              "path": "dist/asset.min.js",
+              "label": "JS distribution"
+            }
+          ]
+        }
+      ]
+    ]
+  },
+  "devDependencies": {
+    "@semantic-release/github": "^5.2.10",
+    "semantic-release": "^15.13.3"
+  }
 }
