--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "test": "node test.js",
+    "test": "semantic-release",
     "semantic-release": "semantic-release"
   },
   "repository": {
