feat(test4): a5dd '4t' to 4 option

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: node_js
 node_js:
   - "10"
+jobs:
+  include:
+    - stage: test
+      script: npm test
+    - stage: semantic-release
+      script: npm semantic-release
