--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-semantic-release",
-  "version": "0.0.0-development",
+  "version": "0.0.0-semantically-released",
   "description": "test",
   "main": "index.js",
   "scripts": {
