feat(master): check if will work on master
asfasasddfs df dsf sdg f gf dg fd g sd f sd f sd f sd v  df f d bfd g  f sd f sd fs d f

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/b-dabrowski/test-semantic-release#readme",
   "release": {
-    "branch": "development",
+    "branch": "master",
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
